# dockimage_scanner

./: README.md  STUDY.md  install.sh  presentation.md  pyproject.toml  report.md  result.md  technical.md
.github/workflows/: release.yml
dockfile_scanner/: .gitignore  CLI_OVERVIEW.md  README.md  benchmark.md  comparison.md  install.sh  pyproject.toml  report.md  result.md
dockfile_scanner/docs/: comparison.md  result.md
dockfile_scanner/examples/: Dockerfile.pre1  Dockerfile.pre1.optimized  Dockerfile.pre2  Dockerfile.pre2.optimized  Dockerfile.pre3  Dockerfile.pre3.optimized  main.py
dockfile_scanner/imgadvisor/: analyzer.py  display.py  layer_analyzer.py  main.py  models.py  parser.py  recommender.py  validator.py
dockfile_scanner/imgadvisor/rules/: base_image.py  build_tools.py  cache_cleanup.py  copy_scope.py  multi_stage.py  python_runtime.py
dockfile_scanner/scripts/: install.sh  node_contention_profile.sh  verify_full_lifecycle.sh
dockfile_scanner/test/: Dockerfile.bloated  Dockerfile.pre3  Dockerfile.pre3.optimized  app.py  main.py
imgadvisor/: analyzer.py  display.py  layer_analyzer.py  main.py  models.py  recommender.py  trivy_scanner.py  validator.py
imgadvisor/rules/: base_image.py  build_tools.py  cache_cleanup.py  copy_scope.py  multi_stage.py
