[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgadvisor"
version = "0.3.3"
description = "Dockerfile pre-build static analyzer and image optimization advisor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
imgadvisor = "imgadvisor.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["imgadvisor*"]
